objects/EUR_CRM_Budget_Transaction__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Budget_Header__c</fullName>
        <label>Budget Header</label>
        <referenceTo>EUR_CRM_Budget__c</referenceTo>
        <relationshipLabel>Budget Transactions (EU) (Budget Header)</relationshipLabel>
        <relationshipName>Transactions_Budgets_Budget_Header</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>EUR_CRM_Contract__c</referenceTo>
        <relationshipName>Transactions_Contracts_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Ind__c</fullName>
        <formula>IF(Text(EUR_CRM_Transaction_Type__c) = &apos;Debit&apos;, &apos;-&apos;, IF(Text(EUR_CRM_Transaction_Type__c) = &apos;Credit&apos;,&apos;+&apos;,&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ind</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Signed_Value__c</fullName>
        <formula>if(EUR_CRM_Ind__c == &apos;-&apos;,  EUR_CRM_Amount__c * (-1), EUR_CRM_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Spend_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spend Activity</label>
        <referenceTo>EUR_ISP_Spend_Activity__c</referenceTo>
        <relationshipLabel>Budget Transactions (EU)</relationshipLabel>
        <relationshipName>Budget_Transactions_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Spend__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spend</label>
        <referenceTo>EUR_ISP_Spend__c</referenceTo>
        <relationshipLabel>Budget Transactions (EU)</relationshipLabel>
        <relationshipName>Budget_Transactions_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Transaction_Category__c</fullName>
        <label>Transaction Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Load</fullName>
                </value>
                <value>
                    <fullName>Rolling Budget Reconciliation</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Contract Transaction</fullName>
                </value>
                <value>
                    <fullName>Contract Refund</fullName>
                </value>
                <value>
                    <fullName>Draft Contract Transaction</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
                <value>
                    <fullName>Draft Spend Transaction</fullName>
                </value>
                <value>
                    <fullName>Spend Transaction</fullName>
                </value>
                <value>
                    <fullName>Adjustment Invoice Tracker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Transfer_From_Budget_Header__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Transfer From (Budget)</label>
        <referenceTo>EUR_CRM_Budget__c</referenceTo>
        <relationshipName>EUR_CRM_FromTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Transfer_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Transactions_User_Transfer_From</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Transfer_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Transactions_User_Transfer_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Budget Transaction (EU)</label>
    <listViews>
        <fullName>EUR_All_DE</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Budget_Header__c</columns>
        <columns>EUR_CRM_Transfer_From_Budget_Header__c</columns>
        <columns>EUR_CRM_Amount__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>EUR_CRM_Transfer_From__c</columns>
        <columns>EUR_CRM_Transfer_To__c</columns>
        <columns>EUR_CRM_Transaction_Category__c</columns>
        <columns>EUR_CRM_Transaction_Type__c</columns>
        <columns>EUR_CRM_Ind__c</columns>
        <columns>EUR_CRM_Signed_Value__c</columns>
        <columns>EUR_CRM_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Budget_Transaction__c.EUR_DE_On_Trade_WKZ</value>
        </filters>
        <label>All DE</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
            <role>EUR_DE</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_All_ZA</fullName>
        <columns>EUR_CRM_Budget_Header__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>EUR_CRM_Transfer_From_Budget_Header__c</columns>
        <columns>EUR_CRM_Amount__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>EUR_CRM_Transfer_From__c</columns>
        <columns>EUR_CRM_Transfer_To__c</columns>
        <columns>EUR_CRM_Transaction_Category__c</columns>
        <columns>EUR_CRM_Transaction_Type__c</columns>
        <columns>EUR_CRM_Signed_Value__c</columns>
        <columns>EUR_CRM_Contract__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Budget_Transaction__c.EUR_ZA_On_Trade_Draft_Transaction,EUR_CRM_Budget_Transaction__c.EUR_ZA_On_Trade_Transaction</value>
        </filters>
        <label>All ZA Budget Transactions</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TRS-{00000000}</displayFormat>
        <label>Budget Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Transactions (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DE_On_Trade_WKZ</fullName>
        <active>true</active>
        <label>DE On Trade WKZ</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_On_Trade_WKZ_Draft_Transaction</fullName>
        <active>true</active>
        <description>DE (On Trade) Draft Transaction</description>
        <label>DE On Trade WKZ- Draft Transaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ISP_iSpend</fullName>
        <active>true</active>
        <label>iSpend</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ISP_iSpend_Draft_Transaction</fullName>
        <active>true</active>
        <label>iSpend - Draft Transaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_On_Trade_Draft_Transaction</fullName>
        <active>true</active>
        <label>EUR ZA On Trade Draft Transaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_On_Trade_Transaction</fullName>
        <active>true</active>
        <label>EUR ZA On Trade Transaction</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>